# mediamtx-rpicamera

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  base64.c  base64.h  camera.cpp  camera.h  encoder.c  encoder.h  encoder_hard_h264.c  encoder_hard_h264.h  encoder_hardware_h264.c  encoder_hardware_h264.h  encoder_jpeg.c  encoder_jpeg.h  encoder_mjpeg.c  encoder_mjpeg.h  encoder_soft_h264.c  encoder_soft_h264.h  encoder_software_h264.c  encoder_software_h264.cpp  encoder_software_h264.h  encoder_v4l.c  encoder_v4l.h  encoder_x264.c  encoder_x264.h  libcamera.patch  main.c  meson.build  parameters.c  parameters.h  pipe.c  pipe.h  post_install.sh  sensor_mode.c  sensor_mode.h  text.c  text.h  (+3 more)
.github/workflows/: build.yml  bump_freetype.yml  lint.yml  release.yml  test.yml
scripts/: base.mk  build.mk  format.mk  test.mk
subprojects/: freetype.wrap  libcamera.wrap  libpisp.wrap  openh264.wrap  x264.wrap
subprojects/packagefiles/: libcamera.patch  libpisp.patch
